// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReduxMotive constructor should construct a motive 1`] = `
Object {
  "foo": [Function],
}
`;

exports[`ReduxMotive constructor should construct a motive 2`] = `[Function]`;

exports[`ReduxMotive intents should be ok if an expanded async motive only defines "effect" prop 1`] = `Object {}`;

exports[`ReduxMotive intents should be ok when async motive returns nothing 1`] = `Object {}`;

exports[`ReduxMotive intents should dispatch an bound motive action creator in an async motive 1`] = `Object {}`;

exports[`ReduxMotive intents should have a bound motive in async motive 1`] = `Object {}`;

exports[`ReduxMotive intents should work with single async motive 1`] = `Object {}`;

exports[`ReduxMotive intents should work with single async motive 2`] = `
Object {
  "progressing": true,
}
`;

exports[`ReduxMotive intents should work with single async motive 3`] = `
Object {
  "progressing": false,
}
`;

exports[`ReduxMotive intents should work with single async motive that throws 1`] = `Object {}`;

exports[`ReduxMotive intents should work with single async motive that throws 2`] = `
Object {
  "progressing": true,
}
`;

exports[`ReduxMotive intents should work with single async motive that throws 3`] = `
Object {
  "error": [Error: foo],
  "progressing": false,
}
`;

exports[`ReduxMotive intents should work with single async motive with configured handlers 1`] = `Object {}`;

exports[`ReduxMotive intents should work with single async motive with configured handlers 2`] = `
Object {
  "isSubmerged": true,
}
`;

exports[`ReduxMotive intents should work with single async motive with configured handlers 3`] = `
Object {
  "isSubmerged": false,
}
`;

exports[`ReduxMotive intents should work with single sync intent 1`] = `
Object {
  "rainDepth": 10,
}
`;
